--- a/2_try_catch_classes/composer.json
+++ b/2_try_catch_classes/composer.json
@@ -1,10 +1,13 @@
 {
     "autoload": {
         "psr-4": {
-            "Classes\\": "Classes"
+            "Classes\\": "src"
         }
     },
-    "require": {
+    "require-dev": {
         "phpunit/phpunit": "^7.5"
+    },
+    "require": {
+        "ext-gd": "*"
     }
 }
